--- a/configuration/nginx/conf.d/nginx.conf
+++ b/configuration/nginx/conf.d/nginx.conf
@@ -18,7 +18,7 @@ http {
     server {
         listen 80;
         server_name symfony.local;
-        root /var/www/public;
+        root /var/www/symfony/public;
 
         location / {
             try_files $uri /index.php$is_args$args;
