--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,15 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/var/www/symfony
+    ports:
+      - "9000:9000"
     environment:
-      - DATABASE_URL=mysql://db:3306/symfony
+      - DATABASE_URL="mysql://symfony:symfony@my_database:3306/jarvis?serverVersion=5.7"
     depends_on:
-      - db
+      - my_database
+    networks:
+      - symfony_network
+
   nginx:
     image: nginx:latest
     ports:
@@ -22,15 +27,24 @@ services:
       - ./configuration/nginx/conf.d/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - symfony
-  db:
-    image: mysql:8.0
+    networks:
+      - symfony_network
+
+  my_database:
+    container_name: my_database
+    image: mysql:5.7
     volumes:
-      - db_data:/var/lib/mysql
+      - ./mysql:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=symfony
+      - MYSQL_DATABASE=jarvis
       - MYSQL_USER=symfony
       - MYSQL_PASSWORD=symfony
+    ports:
+      - "3307:3306"
+    networks:
+      - symfony_network
 
-volumes:
-  db_data:
+networks:
+  symfony_network:
+    driver: bridge
