--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
+        "symfony/dotenv": "*",
         "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.2.*",
@@ -61,7 +61,10 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
